# DeepTutor-local-app

./: .env.example  pyproject.toml  requirements.txt
docs/realtimex/: DEVELOPMENT.md
realtimex_deeptutor/: __init__.py
scripts/: __init__.py  start_web.py
src/: __init__.py
src/agents/co_writer/: narrator_agent.py
src/api/: main.py
src/api/routers/: config.py  realtimex.py
src/cli/: __init__.py  start.py
src/knowledge/: initializer.py
src/services/config/: unified_config.py
src/services/embedding/: client.py  config.py
src/services/embedding/adapters/: __init__.py  realtimex.py
src/services/llm/: capabilities.py  config.py  exceptions.py  factory.py  realtimex_detection.py  realtimex_provider.py
src/services/rag/: factory.py  service.py
src/services/rag/pipelines/: __init__.py
src/services/tts/: config.py
src/tools/: rag_tool.py
src/utils/: realtimex.py
web/: next.config.js  package-lock.json  package.json
web/app/: layout.tsx
web/app/knowledge/: page.tsx
web/app/settings/: types.ts
web/app/settings/components/: ConfigTab.tsx  OverviewTab.tsx  RTXModelSelector.tsx
web/lib/: api.ts
web/scripts/: build-package.js
web/types/: index.ts
