# Python project configuration for RealTimeX DeepTutor
# This file configures the package for installation and integration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtimex-deeptutor"
version = "0.5.0.post2"
description = "RealTimeX DeepTutor - Intelligent learning companion with multi-agent collaboration and LightRAG"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

# Core dependencies - minimal set for LightRAG-based operation
dependencies = [
    # Core utilities
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "tiktoken>=0.5.0",
    "jinja2>=3.1.0",
    # HTTP and API
    "requests>=2.32.2",
    "openai>=1.30.0",
    "aiohttp>=3.9.4",
    "httpx>=0.27.0",
    # Async support
    "nest_asyncio>=1.5.8",
    "tenacity>=8.0.0",
    # Web framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    # RAG - LightRAG only (lightweight)
    "lightrag-hku>=1.0.0",
    # PDF parsing
    "PyMuPDF>=1.26.0",
    # Scientific computing
    "numpy>=1.24.0,<2.0.0",
    # Academic and research tools
    "arxiv>=2.0.0",
    # RealTimeX SDK
    "realtimex-sdk>=1.1.2",
]

# Optional dependencies for different providers and features
[project.optional-dependencies]
# LLM providers
anthropic = ["anthropic>=0.30.0"]
dashscope = ["dashscope>=1.14.0"]

# Search providers
search = ["perplexityai>=0.1.0"]

# Heavy RAG packages (optional - for full multimodal support)
raganything = ["raganything>=0.1.0"]
llamaindex = ["llama-index>=0.14.12"]

# Academic tools
academic = ["arxiv>=2.0.0"]

# Full installation with all optional features
all = [
    "anthropic>=0.30.0",
    "dashscope>=1.14.0",
    "perplexityai>=0.1.0",
    "raganything>=0.1.0",
    "llama-index>=0.14.12",
    "arxiv>=2.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.8.0",
]

[project.scripts]
# Main entry point for full-stack startup (uvx realtimex-deeptutor)
realtimex-deeptutor = "src.cli.start:main"
deeptutor = "src.cli.start:main"  # Shorter alias

# Backend-only mode (existing, for advanced users)
deeptutor-backend = "src.api.run_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "realtimex_deeptutor*"]

[tool.setuptools.package-data]
# Include non-Python files in the package distribution
src = [
    "agents/*/prompts/**/*.yaml",
    "agents/*/prompts/**/*.yml",
]
"*" = [
    "*.yaml",
    "*.yml",
]

# ============================================
# Black code formatter configuration
# ============================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | node_modules
  | \.next
)/
'''

# ============================================
# Ruff linter and formatter configuration
# ============================================
[tool.ruff]
# Target Python version
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# 只启用最基础的规则（放宽要求）
select = [
    "E",   # pycodestyle errors (语法错误)
    "F",   # pyflakes (未使用的导入、变量等)
    "I",   # isort (import 排序)
    # 其他规则都忽略，不强制要求
]

# Ignore specific rules (放宽检查，只保留重要规则)
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "TRY003", # Avoid specifying long messages outside exception class
    "T201",  # print found (允许 print 语句，用于调试)
    "E722",  # Do not use bare except (某些情况下需要)
    "E402",  # Module level import not at top of file (某些情况下需要)
    "PLC0415", # import should be at top-level (某些情况下需要)
    "PTH123", # open() should be replaced by Path.open() (允许使用 open)
    "PTH103", # os.makedirs() should be replaced by Path.mkdir() (允许使用 os.makedirs)
    "PTH118", # os.path.join() should be replaced by Path (允许使用 os.path.join)
    "B904",  # Within except clause, raise exceptions with raise ... from err
    "EM101",  # Exception must not use a string literal
    "EM102",  # Exception must not use an f-string literal
    "TRY002", # Create your own exception
    "TRY300", # Consider moving this statement to an else block
    "DTZ005", # datetime.now() called without tz argument
    "RET504", # Unnecessary assignment before return
    "PLW2901", # for loop variable overwritten by assignment target
    "F841",  # Local variable assigned but never used
    "ERA001", # Found commented-out code (允许注释代码)
    "B006",  # Do not use mutable data structures for argument defaults
]

# Exclude patterns
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    ".next",
    "out",
    "venv",
    "__pycache__",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"

# ============================================
# Ruff import sorting (isort replacement)
# ============================================
[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]
force-sort-within-sections = true
split-on-trailing-comma = true

# ============================================
# Ruff per-file-ignores
# ============================================
[tool.ruff.lint.per-file-ignores]
# Allow longer lines in test files
# F401: Allow unused imports for availability checks in tests
"**/test_*.py" = ["E501", "PLR2004", "F401"]
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# ============================================
# Ruff mccabe complexity
# ============================================
[tool.ruff.lint.mccabe]
max-complexity = 10

# ============================================
# Pytest configuration
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short"
]

# ============================================
# MyPy type checking configuration
# ============================================
[tool.mypy]
python_version = "3.10"
# Relaxed type checking for gradual adoption
pretty = false
show_error_context = false
warn_return_any = false
warn_no_return = false
show_error_codes = true
ignore_missing_imports = true
follow_imports = "silent"
# Disable strict checks that generate too many errors
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = false

# Module-specific overrides
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.tools.*"
ignore_errors = true  # Some tools may have dynamic imports

# ============================================
# Bandit security linting configuration
# ============================================
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
# B101=assert, B311=random, B403/B404=pickle/subprocess imports
# B110=try_except_pass (intentional for non-critical error handling)
# B104=hardcoded_bind_all_interfaces (required for server binding)
# B112=try_except_continue (intentional for iteration)
# B105=hardcoded_password_string (false positive on empty string initialization)
# B301=pickle (used for internal embedding cache, not untrusted data)
# B501=request_with_no_cert_validation (opt-in via env var for dev/testing)
# B603=subprocess_without_shell_equals_true (controlled execution)
# B202=tarfile_unsafe_members (already using safe_members filter)
skips = ["B101", "B311", "B403", "B404", "B110", "B104", "B112", "B105", "B301", "B501", "B603", "B202"]
